# avacache-sdk

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md
.agents/skills/avacache/: SKILL.md
.claude/skills/avacache/: SKILL.md
docs/: archive-contract.md  cookbook.md  lookups.md
python/: README.md  pyproject.toml
python/src/avacache/: __init__.py  __main__.py  cli.py  client.py  duckdb_helper.py  hex.py  manifest.py
python/tests/: conftest.py  test_cli.py  test_client.py  test_integration.py  test_offline.py
typescript/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
typescript/src/: bin.ts  cache.ts  cli.ts  client.ts  duckdb.ts  hex.ts  index.ts  manifest.ts  parquet.ts
typescript/tests/: cli.test.ts  client.test.ts  hex.test.ts  manifest.test.ts
typescript/tests/fixtures/: 2020-09-23.blocks.parquet  2020-09-23.events.parquet  2020-09-23.txs.parquet  2020-09-24.blocks.parquet  2020-09-24.txs.parquet
