[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "avacache"
version = "0.1.0"
description = "Python SDK for the public Avalanche C-Chain parquet archive."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "CC-BY-4.0" }
authors = [{ name = "avacache maintainers" }]
keywords = ["avalanche", "blockchain", "parquet", "dataset", "c-chain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pyarrow>=14.0",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
duckdb   = ["duckdb>=1.0"]
pandas   = ["pandas>=2.0"]
polars   = ["polars>=0.20"]
notebook = ["tqdm>=4.66", "ipython>=8.0"]
all      = ["duckdb>=1.0", "pandas>=2.0", "polars>=0.20", "tqdm>=4.66", "ipython>=8.0"]
dev      = ["pytest>=7.0", "respx>=0.21", "ruff"]

[project.urls]
Homepage = "https://github.com/TBD/avacache"

[tool.hatch.build.targets.wheel]
packages = ["src/avacache"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: hits real R2 (network required)"]
